# unit3dprep

./: .dockerignore  .gitattributes  .gitignore  404.html  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  config.env.example  docker-compose.yml  generate_hash.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-docker.yml  publish-pypi.yml  release.yml
configurazione/: index.html
deploy-ultracc/: index.html
deploy-vps/: index.html
deploy/systemd/: README.md  unit3dwebup.service
docker/: entrypoint.sh  index.html
docs/: configurazione.en.md  configurazione.md  deploy-ultracc.en.md  deploy-ultracc.md  deploy-vps.en.md  deploy-vps.md  docker.en.md  docker.md  index.en.md  index.md  installazione.en.md  installazione.md  integrazione-webup.en.md  integrazione-webup.md  nomenclatura.en.md  nomenclatura.md  troubleshooting.en.md  troubleshooting.md  uso-cli.en.md  uso-cli.md  uso-web.en.md  uso-web.md
en/: index.html
en/configurazione/: index.html
en/deploy-ultracc/: index.html
en/deploy-vps/: index.html
en/docker/: index.html
en/installazione/: index.html
en/integrazione-webup/: index.html
en/nomenclatura/: index.html
en/troubleshooting/: index.html
en/uso-cli/: index.html
en/uso-web/: index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  tokens.css  types.ts
frontend/src/components/: FileBrowser.tsx  Sidebar.tsx  TopBar.tsx  UpdateBanner.tsx  primitives.tsx
frontend/src/hooks/: useIncremental.ts
frontend/src/i18n/locales/: en.ts  it.ts
frontend/src/modals/: ChangelogModal.tsx  ReseedWizardModal.tsx  UpdateProgressModal.tsx  UploadModal.tsx  WizardModal.tsx
frontend/src/views/: LibraryView.tsx  LoginView.tsx  LogsView.tsx  QueueView.tsx  ReseedView.tsx  SearchView.tsx  SettingsView.tsx  UploadedView.tsx
installazione/: index.html
integrazione-webup/: index.html
itatorrents/: cli.py  core.py  media.py  upload.py
itatorrents/web/: app.py  clients.py  config.py  db.py  logbuf.py  templates_env.py  tmdb_cache.py  trackers.py
itatorrents/web/api/: __init__.py  auth.py  fs.py  library.py  logs.py  queue.py  quickupload.py  search.py  settings.py  trackers.py  uploaded.py  version.py  wizard.py
itatorrents/web/routes/: auth.py  library.py  tmdb_api.py  uploaded.py  wizard.py
itatorrents/web/static/: style.css
itatorrents/web/templates/: base.html  detail.html  library.html  login.html  uploaded.html  wizard.html
itatorrents/web/templates/wizard_fragments/: hardlink_confirm.html  names_form.html  tmdb_form.html  (+1 more)
nomenclatura/: index.html
search/: search_index.json
troubleshooting/: index.html
unit3dprep/: cli.py  core.py  i18n.py  media.py  upload.py
unit3dprep/web/: _env.py  app.py  auth.py  clients.py  config.py  db.py  duplicate_check.py  lang_cache.py  logbuf.py  logclass.py  reseed.py  tmdb_cache.py  trackers.py  webup_client.py  webup_job_fix.py  webup_logclass.py  webup_orchestrator.py  webup_ws.py
unit3dprep/web/api/: fs.py  library.py  quickupload.py  reseed.py  search.py  settings.py  tmdb.py  trackers.py  version.py  webup.py  wizard.py
uso-cli/: index.html
uso-web/: index.html
