[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "itatorrents"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "pymediainfo>=6.0",
    "guessit>=3.8",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "starlette>=0.27",
    "bcrypt>=4.0",
    "sse-starlette>=1.8",
    "itsdangerous>=2.1",
    "httpx>=0.26",
    "pydantic>=2.0",
    "packaging>=23",
]

[project.scripts]
itatorrents = "itatorrents.cli:main"
itatorrents-web = "itatorrents.web.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["itatorrents*"]

[tool.setuptools.package-data]
"itatorrents.web" = ["dist/**/*", "dist/*"]
