[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unit3dprep"
version = "0.5.0"
requires-python = ">=3.10"
dependencies = [
    "pymediainfo>=6.0",
    "guessit>=3.8",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "starlette>=0.27",
    "bcrypt>=4.0",
    "sse-starlette>=1.8",
    "itsdangerous>=2.1",
    "httpx>=0.26",
    "pydantic>=2.0",
    "packaging>=23",
]

[project.scripts]
unit3dprep = "unit3dprep.cli:main"
unit3dprep-web = "unit3dprep.web.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["unit3dprep*"]

[tool.setuptools.package-data]
"unit3dprep.web" = ["dist/**/*", "dist/*"]
