[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unit3dprep"
version = "1.0.3"
description = "Web UI + CLI di pre-flight per tracker Unit3D, companion di Unit3DWebUp (audio ITA, nomenclatura ItaTorrents, hardlink, upload)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Davide Sidoti" }]
keywords = ["unit3d", "tracker", "torrent", "itatorrents", "mediainfo", "tmdb", "seeding", "qbittorrent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.10"
dependencies = [
    "pymediainfo>=6.0",
    "guessit>=3.8",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "starlette>=0.27",
    "bcrypt>=4.0",
    "sse-starlette>=1.8",
    "itsdangerous>=2.1",
    "httpx>=0.26",
    "pydantic>=2.0",
    "packaging>=23",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/davidesidoti/unit3dprep"
Documentation = "https://davidesidoti.github.io/unit3dprep/"
Repository = "https://github.com/davidesidoti/unit3dprep"
Changelog = "https://github.com/davidesidoti/unit3dprep/blob/main/CHANGELOG.md"
Issues = "https://github.com/davidesidoti/unit3dprep/issues"

[project.scripts]
unit3dprep = "unit3dprep.cli:main"
unit3dprep-web = "unit3dprep.web.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["unit3dprep*"]

[tool.setuptools.package-data]
"unit3dprep.web" = ["dist/**/*", "dist/*"]
